syntax = "proto3";
package system;

option go_package = "systempb";

message LamportsBalanceUpdate {
    string address = 1;
    uint64 pre_balance = 2;
    uint64 post_balance = 3;
}